# nordic

./: .gitignore  README.md
BLE/SCANNER/: CMakeLists.txt  ble_m.c  ble_m.h  main.c  scratch.txt
BLE/SCANNER/pca10056/s140/ses/: Makefile.bak  Scanner.emProject
ble/SCANNER/: buttons.c
ble/SCANNER/pca10056/s140/config/: sdk_config.h
ble/T52/: .gitignore  main.c
ble/T52/pca10056/s140/config/: sdk_config.h
ble/T52/pca10056/s140/ses/: t52.emProject
ble/ble_app_hrs_c/: main.c
ble/ble_app_hrs_c/pca10056/s140/config/: sdk_config.h
ble/ble_app_hrs_c/pca10056/s140/ses/: ble_app_hrs_c_pca10056_s140.emProject
ble/experimental/thingy/: main.c
